[package]
name = "gluesql-conntrack-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.0"
enum_all_variants = "0.1.0"
futures = "0.3.0"
gluesql = { version = "0.15.0", default-features = false }
thiserror = "1.0.0"
tracing = "0.1.0"

conntrack = { git = "https://github.com/KalitaAlexey/conntrack-rs.git", branch = "filter" }

[dev-dependencies]
eyre = "0.6.0"
serde_json = "1.0.0"
tokio = { version = "1.0.0", features = ["full"] }
